--- a/index.html
+++ b/index.html
@@ -3,187 +3,102 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webpage demo</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Webpage Demo</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body {
-        margin: 0;
-        padding: 0;
         background: radial-gradient(circle, rgb(139, 48, 48), rgb(12, 53, 114));
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-      }
-      .content-carousel {
-        width: 100%;
-        height: 270px;
-      }
-      img {
-        height: 270px;
-        object-fit: cover;
-        opacity: 0.6;
-      }
-      .card-section {
-        display: flex;
-        justify-content: space-around;
-      }
-      .card-img-top {
-        opacity: 1;
-      }
-      .card {
-        height: 350px;
-      }
-      .card:hover {
-        transform: scale(0.9);
-        transition: transform 300ms linear;
-      }
-      a {
-        width: 100%;
-      }
-      footer {
-        text-align: center;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 17px;
-        font-style: italic;
-        font-weight: 500;
-        color: antiquewhite;
-        background-color: purple;
-      }
-      @media (max-width: 600px) {
-        .card-section {
-          flex-direction: column;
-          align-items: center;
-          gap: 10px;
-        }
-      }
-      @media (min-width: 601px) and (max-width: 1200px) {
-        .card-section {
-          justify-content: space-around;
-          flex-wrap: wrap;
-          gap: 10px;
-        }
       }
     </style>
   </head>
-  <body>
-    <div class="content-carousel">
-      <div id="carouselExampleIndicators" class="carousel slide">
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="./images/anders-jilden-cYrMQA7a3Wc-unsplash.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./images/jms-kFHz9Xh3PPU-unsplash.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./images/dan-freeman-wAn4RfmXtxU-unsplash.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+  <body class="min-h-screen flex flex-col gap-10 text-white">
+
+    <!-- Carousel -->
+    <div class="relative w-full h-[270px] overflow-hidden">
+      <div class="carousel flex transition-all duration-700 ease-in-out" id="carousel">
+        <img src="./images/anders-jilden-cYrMQA7a3Wc-unsplash.jpg" class="w-full h-[270px] object-cover opacity-70" />
+        <img src="./images/jms-kFHz9Xh3PPU-unsplash.jpg" class="w-full h-[270px] object-cover opacity-70" />
+        <img src="./images/dan-freeman-wAn4RfmXtxU-unsplash.jpg" class="w-full h-[270px] object-cover opacity-70" />
       </div>
+      <!-- Carousel Controls -->
+      <button onclick="prevSlide()" class="absolute left-4 top-1/2 -translate-y-1/2 text-2xl font-bold bg-black bg-opacity-30 px-3 py-1 rounded hover:bg-opacity-60">
+        &#10094;
+      </button>
+      <button onclick="nextSlide()" class="absolute right-4 top-1/2 -translate-y-1/2 text-2xl font-bold bg-black bg-opacity-30 px-3 py-1 rounded hover:bg-opacity-60">
+        &#10095;
+      </button>
     </div>
-    <div class="card-section">
-      <div class="card" style="width: 18rem">
-        <img
-          src="./images/What-Is-JavaScript-Used-For.avif"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <h5 class="card-title">JAVASCRIPT</h5>
-          <p class="card-text">100+ Javascript Concepts you need to know</p>
-          <a
-            href="https://youtu.be/lkIFF4maKMU?si=VprVL_x0DCiqsxOg"
-            class="btn btn-primary"
-            >Watch Now</a
-          >
+
+    <!-- Card Section -->
+    <div class="flex flex-wrap justify-center gap-8 px-4">
+      <!-- Card 1 -->
+      <div class="bg-white text-gray-900 rounded-xl overflow-hidden shadow-lg w-80 transform hover:scale-95 transition duration-300">
+        <img src="./images/What-Is-JavaScript-Used-For.avif" class="h-48 w-full object-cover" />
+        <div class="p-4">
+          <h3 class="text-xl font-semibold mb-2">JAVASCRIPT</h3>
+          <p class="mb-4">100+ Javascript Concepts you need to know</p>
+          <a href="https://youtu.be/lkIFF4maKMU?si=VprVL_x0DCiqsxOg" target="_blank"
+            class="block text-center bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-md">
+            Watch Now
+          </a>
         </div>
       </div>
-      <div class="card" style="width: 18rem">
-        <img src="./images/images.jpeg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">VS CODE</h5>
-          <p class="card-text">
-            12 VS Code Extensions to INCREASE Productivity 2024
-          </p>
-          <a
-            href="https://youtu.be/1UyQaR8pvjk?si=A0Eze_SD1Lk1x-Jl"
-            class="btn btn-primary"
-            >Watch Now</a
-          >
+
+      <!-- Card 2 -->
+      <div class="bg-white text-gray-900 rounded-xl overflow-hidden shadow-lg w-80 transform hover:scale-95 transition duration-300">
+        <img src="./images/images.jpeg" class="h-48 w-full object-cover" />
+        <div class="p-4">
+          <h3 class="text-xl font-semibold mb-2">VS CODE</h3>
+          <p class="mb-4">12 VS Code Extensions to INCREASE Productivity 2024</p>
+          <a href="https://youtu.be/1UyQaR8pvjk?si=A0Eze_SD1Lk1x-Jl" target="_blank"
+            class="block text-center bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-md">
+            Watch Now
+          </a>
         </div>
       </div>
-      <div class="card" style="width: 18rem">
-        <img src="./images/data.jpeg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">DATA ANALYTICS</h5>
-          <p class="card-text">
-            Ultimate Data Analyst Bootcamp | SQL, Excel, Tableau and more..
-          </p>
-          <a
-            href="https://youtu.be/wQQR60KtnFY?si=cWC_-dTjhTrVpwv4"
-            class="btn btn-primary"
-            >Watch Now</a
-          >
+
+      <!-- Card 3 -->
+      <div class="bg-white text-gray-900 rounded-xl overflow-hidden shadow-lg w-80 transform hover:scale-95 transition duration-300">
+        <img src="./images/data.jpeg" class="h-48 w-full object-cover" />
+        <div class="p-4">
+          <h3 class="text-xl font-semibold mb-2">DATA ANALYTICS</h3>
+          <p class="mb-4">Ultimate Data Analyst Bootcamp | SQL, Excel, Tableau and more..</p>
+          <a href="https://youtu.be/wQQR60KtnFY?si=cWC_-dTjhTrVpwv4" target="_blank"
+            class="block text-center bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-md">
+            Watch Now
+          </a>
         </div>
       </div>
     </div>
-    <footer>Copyright&copyAngshuman</footer>
+
+    <!-- Footer -->
+    <footer class="mt-10 text-center bg-purple-700 py-4 text-white text-lg italic font-medium">
+      &copy; Angshuman
+    </footer>
+
+    <!-- Carousel Script -->
+    <script>
+      const carousel = document.getElementById('carousel');
+      const totalSlides = carousel.children.length;
+      let index = 0;
+
+      function showSlide(i) {
+        const offset = -i * 100;
+        carousel.style.transform = `translateX(${offset}%)`;
+      }
+
+      function nextSlide() {
+        index = (index + 1) % totalSlides;
+        showSlide(index);
+      }
+
+      function prevSlide() {
+        index = (index - 1 + totalSlides) % totalSlides;
+        showSlide(index);
+      }
+
+      // Auto-slide
+      setInterval(nextSlide, 4000);
+    </script>
   </body>
 </html>
